--- a/Formulário/Formulário.csproj
+++ b/Formulário/Formulário.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Cadastro.Designer.cs">
       <DependentUpon>Cadastro.cs</DependentUpon>
     </Compile>
+    <Compile Include="Entities\Cadastros.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
